        PR libffi/42243         * src/powerpc/ffi_darwin.c (ffi_prep_args): Remove extra parentheses.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154956 138bc75d-0d04-0410-961f-82ee72b054a4